kubernetes/apps/observability/tempo/app/service-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tempo-headless
  labels:
    app.kubernetes.io/name: tempo
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 3200
      targetPort: 3200
      protocol: TCP
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
      protocol: TCP
    - name: otlp-http
      port: 4318
      targetPort: 4318
      protocol: TCP
  selector:
    app.kubernetes.io/name: tempo
